# njit-prof-bill-cs490-project-summer-2025

./: .firebaserc  .gitignore  README.md  components.json  et --hard 602168d  fileUpload.tsx  firebase.json  jest.config.js  jest.setup.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  src - Shortcut.lnk  tailwind.config.js  tailwind.config.ts  tsconfig.json
LLM_Tests/Biography Text/: sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample16.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample9.txt
LLM_Tests/Files/: Computer-Science-Intern-Resume-BW.docx  mimimal_resume.txt  software-engineer-resume-sample-template.docx  standard_resume.txt
back_end/: app.py
back_end/parser/: main.py  parser.py  sample.docx  sample.md  sample.odt
back_end/routes/: resume.py  resume_render.py  upload.py
back_end_start/: db.py
back_end_v2/: app.py  config.py  firebase_client.py
back_end_v2/routes/: upload.py
back_end_v2/utils/: file_utils.py
docs/: Sprint 1 PRD.md  Sprint 2 PRD.md  Sprint 3 PRD.md  project-setup.md
model/: sample.txt
parser/: config.py  parse.py  requirements.txt
parser/extractors/: docx.py  md.py
public/: logo-removebg  manifest.json  site.webmanifest  sw.js
public/prompts/: extract-data-prompt-1.txt
scripts/: extract_text.py  parse_resume.py  parse_resume_github_proxy.py  test.py
src/app/: globals.css  layout.tsx  page.tsx  server-layout.tsx  tailwind.config.ts
src/components/: AIJobDescriptionPreview.tsx  AIJobDescriptionsListGenerate.tsx  AIResumesList.tsx  BaseLayout.tsx  ChatSection.tsx  ContactCard.tsx  CountrySelector.tsx  DocumentList.tsx  EducationDisplay.tsx  EducationEditor.tsx  EducationList.tsx  FetchAndDisplayKey.tsx  FileUpload.tsx  GenerateCard.tsx  GeneratorCard.tsx  (+80 more)
(+184 files in other folders)
