[project]
name = "fiveguys-cs490-project-summer-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Lior",email = "ultron895@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "firebase-admin (>=6.9.0,<7.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
